# py-layers

./: .gitignore  AUTHORS.md  INSTALL.md  LICENSE  MANIFEST.in  NOTICE.md  README.md  fn.py  make.bash  pyproject.toml  route53.py  setup.py
docs/: README.md  ec2.md  mails.md
layers/python/shares/: __init__.py  debug.py  dns.py  mails.py
layersclick/: __init__.py  builder.py  cloudfront.py  ec2.py  ec2_image.py  ec2_instance.py  efs.py  iam.py  lambdas.py  logs.py  mails.py  sns.py  utils.py
layerslib/: cloudfront.py  cloudwatch.py  debug.py  dns.py  ec2.py  efs.py  iam.py  lambdas.py  logs.py  mails.py  shell.py  sns.py  utils.py
layerslib/ec2/: __init__.py  image.py  instance.py
requirements/: pypi.txt
scripts/: layers.py
tests/: test_layerslib.py
