[tool.poetry]
name = "py-layers"
version = "0.1.0"
description = ""
authors = ["user.name <gmail@hdknr.com>"]
packages = [
    { include = "layerslib" },
    { include = "layersclick" },
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
boto3 = "^1.14.33"
pymongo = "^3.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
layers = 'layersclick:dispatch'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

